src/objects/Merchant__c.object
<CustomObject>
    <fields>
        <fullName>Additional_References__c</fullName>
        <label>Additional References:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_late_with_any_of_your_vendors__c</fullName>
        <label>Are you late with any of your vendors?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_on_Business_Sale_Response__c</fullName>
        <label>Comments on Business Sale Response:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_length_of_time_with_processor__c</fullName>
        <label>Confirm length of time with processor</label>
        <picklist>
            <picklistValues>
                <fullName>0 to 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merchants</relationshipLabel>
        <relationshipName>Merchants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Balance_With_Competitor_RA__c</fullName>
        <label>Current Balance With Competitor/RA</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_you_have_contracts_with_customers__c</fullName>
        <label>Do you have contracts with customers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_own_any_other_businesses__c</fullName>
        <label>Do you own any other businesses?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_plan_to_sell_the_business_soon__c</fullName>
        <label>Do you plan to sell the business soon?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Sales_of_the_Business__c</fullName>
        <label>Gross Monthly Sales of the Business</label>
        <picklist>
            <picklistValues>
                <fullName>$2,500 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 to $25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,001 to $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,001 to $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $100,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_had_a_cash_advance_before__c</fullName>
        <label>Have you had a cash advance before?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_used_current_processor__c</fullName>
        <label>How long have you used current processor</label>
        <picklist>
            <picklistValues>
                <fullName>0 to 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_locations_for_this_business__c</fullName>
        <label>How many locations for this advance?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_part_time_employees_do_you_have__c</fullName>
        <label>How many part time employees do you have</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_square_feet_is_the_business__c</fullName>
        <label>How many square feet is the business?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_is_the_rent_for_the_business__c</fullName>
        <label>How much is the rent for the business?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_much_of_the_business_do_you_own__c</fullName>
        <label>How much of the business do you own?</label>
        <picklist>
            <picklistValues>
                <fullName>30% to 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51% to 99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_closing_in_the_next_year_what_period__c</fullName>
        <label>If closing in the next year what period?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_other_then_what__c</fullName>
        <label>If other, then what?</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_are_you_current_on_franchise_dues__c</fullName>
        <label>If so are you current on franchise dues?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_so_then_what_type__c</fullName>
        <label>If so then what type?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_so_with_which_Cash_Advance_Company__c</fullName>
        <label>If so, with which Cash Advance Company?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_business_a_franchise__c</fullName>
        <label>Is this business a franchise?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Late_w_Vendors_Details__c</fullName>
        <label>Late w/ Vendors Details:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merchant_Interview_Completed_Date__c</fullName>
        <label>Merchant Interview Completed Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Merchant_Interview_Phone_Number__c</fullName>
        <label>Merchant Interview Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>How many full time employees do you have</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Merchants</relationshipLabel>
        <relationshipName>Merchants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Merchant_Interview_Assessment__c</fullName>
        <label>Overall Merchant Interview Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_businesses_are_nearby__c</fullName>
        <label>What businesses are nearby?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_plan_to_use_the_money_for__c</fullName>
        <label>What do you plan to use the money for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_hours_are_you_open__c</fullName>
        <label>What hours are you open?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_busy_season__c</fullName>
        <label>What is your busy season?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consistent year round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_balance__c</fullName>
        <label>What is your current balance?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_your_email_address__c</fullName>
        <label>What is your email address?</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>What_is_your_home_phone_number__c</fullName>
        <label>What is your home phone number?</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>What_is_your_mobile_phone_number__c</fullName>
        <label>What is your mobile phone number?</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>What_is_your_slow_season__c</fullName>
        <label>What is your slow season?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consistent year round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_type_of_Business_Location__c</fullName>
        <label>What type of Business Location?</label>
        <picklist>
            <picklistValues>
                <fullName>Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand Alone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_type_of_Business_is_it__c</fullName>
        <label>What type of Business is it?</label>
        <picklist>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrangements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile Dealerships New/Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Body Repair, Collision, Painting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Brake and Muffler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - General Repair, Truck, RV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Parts, Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Quick Sevice, Lube, Tune-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Tire, Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Towing &amp; Emergency Road Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barber Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating/Marina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book and Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Alarm Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpet Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Wash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Cashing Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing - Shoe Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy Clubs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_did_you_purchase_start_the_business__c</fullName>
        <label>When did you purchase/start the business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_does_your_lease_expire__c</fullName>
        <label>When does your lease expire?</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 yrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 yrs+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_was_business_opened__c</fullName>
        <label>When was business opened?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Will_the_business_close_for_any_reason__c</fullName>
        <label>Will the business close for any reason?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>if_other_locat_of_terminals_at_each_c__c</fullName>
        <label>if other locat. # of terminals at each:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_cc_card_terminal_at_this_location__c</fullName>
        <label># of cc card terminal at this location?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Merchant-{0000}</displayFormat>
        <label>Merchant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>